Menu and Cart icon z-index Fix

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,7 @@ footer {
   
 }
 .footer-title {
-  color: rgb(219, 141, 46);
+  color: rgb(252, 250, 215);
   position: absolute;
   left: 75px;
   font-size: small;
